--- a/css/index.css
+++ b/css/index.css
@@ -62,6 +62,7 @@ p {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;/*для того щоб картинка не рухалась*/
     color: white;
     text-align: center;
     padding: 40px;
@@ -123,6 +124,7 @@ a.btn:hover {
     background-color: white;
     border-radius: 30px;
     text-align: center;
+    margin-bottom: 15px;
 }
 
 .social_proj img {
@@ -162,7 +164,6 @@ footer p {
     margin: 10px 0;
 }
 
-
 @media (max-width: 768px) {
     header {
         flex-direction: column;
@@ -186,11 +187,18 @@ footer p {
     .social_proj {
         flex-direction: column;
         align-items: center;
+        margin: 40px;
     }
 
     .social_proj article {
         max-width: 80%;
-        margin-bottom: 20px;
+        margin: 80px 0 0 0;
+        padding: 30px;
+        margin-bottom: 15px;
+    }
+
+    .social_proj article:first-child {
+        margin-top: 0;
     }
 }
 
