--- a/my-react-app/src/assets/css/all.css
+++ b/my-react-app/src/assets/css/all.css
@@ -383,6 +383,24 @@ footer a:hover {
 .logout-button:hover {
     background-color: #ff1a1a;
 }
+
+
+.rating-stars {
+    display: flex;
+    justify-content: center;
+    margin: 10px 0;
+}
+
+.star {
+    font-size: 24px;
+    color: white;
+    cursor: pointer;
+    transition: color 0.2s;
+}
+
+.star.active {
+    color: green;
+}
 /* плншет*/
 @media (max-width: 768px) {
     header {
